--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -105,6 +105,10 @@
     }
   }
 
+  [gn-popup] {
+    max-height: none;
+  }
+
 }
 
 .portlet-borderless-container [gn-metadata-display].sxt-scroll {
